--- a/Palette_Training_1-main/Assignment_1.ipynb
+++ b/Palette_Training_1-main/Assignment_1.ipynb
@@ -2,107 +2,131 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Assignement 1"
-      ],
       "metadata": {
         "id": "pkIv6ki2IEPX"
-      }
+      },
+      "source": [
+        "# Assignement 1"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Please **do not** change, delete or edit any cells. Write your code in between designated lines."
-      ],
       "metadata": {
         "id": "uPzTokrsLSZ9"
-      }
+      },
+      "source": [
+        "Please **do not** change, delete or edit any cells. Write your code in between designated lines."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Question 1 (5 points)"
-      ],
       "metadata": {
         "id": "qZaWKGXcJFuj"
-      }
+      },
+      "source": [
+        "#### Question 1 (5 points)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "N-i0sQmcId4W"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "I will be a data scientist\n"
+          ]
+        }
+      ],
       "source": [
         "# Here execute the following sentence - string \"I will be a data scientist\" by using print() function.\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "print(\"I will be a data scientist\")\n",
         "## Your code here - up ##"
-      ],
-      "metadata": {
-        "id": "N-i0sQmcId4W"
-      },
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Question 2 (10 points)"
-      ],
       "metadata": {
         "id": "XyeAqdgIJUUh"
-      }
+      },
+      "source": [
+        "#### Question 2 (10 points)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "y_BX1T8sJS9U"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "22\n"
+          ]
+        }
+      ],
       "source": [
         "# Assign a and b variables respectively with 10 and 12, then print sum of these two variables.\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "a = 10\n",
+        "b = 12\n",
+        "print(a+b)\n",
         "## Your code here - up ##"
-      ],
-      "metadata": {
-        "id": "y_BX1T8sJS9U"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Question 3 (20 Points)"
-      ],
       "metadata": {
         "id": "wWP7OJtQKTNT"
-      }
+      },
+      "source": [
+        "Question 3 (20 Points)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "FoCDtEylKPjY"
+      },
+      "outputs": [],
       "source": [
         "# So we assigned a and b in the above cell. Let's write a code that print \n",
         "# \"a is greater b\" or \"a is less than b\" \n",
         "# by using Python's conditional statement (if - else). Please see training_1.\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "if a>b:\n",
+        "    print(\"a is greater than b\")\n",
         "## Your code here - up ##"
-      ],
-      "metadata": {
-        "id": "FoCDtEylKPjY"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Question 4 (40 points)"
-      ],
       "metadata": {
         "id": "H5VZWM1lMIF4"
-      }
+      },
+      "source": [
+        "#### Question 4 (40 points)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "dfPaZrkGMNRa"
+      },
+      "outputs": [],
       "source": [
         "# We built a function - canola_convertion () to convert pounds to bushel for canola. \n",
         "# We added if and else conditional statement to this function\n",
@@ -113,24 +137,24 @@
         "## Your code here - down ##\n",
         "\n",
         "## Your code here - up ##"
-      ],
-      "metadata": {
-        "id": "dfPaZrkGMNRa"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Question 5 (25 points)"
-      ],
       "metadata": {
         "id": "XAECT2JJOlmA"
-      }
+      },
+      "source": [
+        "#### Question 5 (25 points)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "Hn9rzk2GOr6c"
+      },
+      "outputs": [],
       "source": [
         "# Assign list that contains even numbers from 1 to 10. Then add apple word to the list. \n",
         "# It will look like 'apple' in the list. \n",
@@ -138,58 +162,56 @@
         "## Your code here - down ##\n",
         "\n",
         "## Your code here - up ##"
-      ],
-      "metadata": {
-        "id": "Hn9rzk2GOr6c"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "hHYeNRHOPqX2"
+      },
+      "outputs": [],
       "source": [
         "# Now it is time to delete 'apple' word from the list. It looks weird there.\n",
         "\n",
         "## Your code here - down ##\n",
         "\n",
         "## Your code here - up ##"
-      ],
-      "metadata": {
-        "id": "hHYeNRHOPqX2"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "cr2F3ZWNP3Wv"
+      },
+      "outputs": [],
       "source": [
         "# Can you print 6 only from the list? If yes, please show in the codes.\n",
         "\n",
         "## Your code here - down ##\n",
         "\n",
         "## Your code here - up ##"
-      ],
-      "metadata": {
-        "id": "cr2F3ZWNP3Wv"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "a6NObJGmQWaD"
+      },
       "source": [
         "END OF ASSIGNEMNT\n",
         "\n",
         "Thank you!"
-      ],
-      "metadata": {
-        "id": "a6NObJGmQWaD"
-      }
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -203,10 +225,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.3"
+      "version": "3.9.13"
     },
-    "colab": {
-      "provenance": []
+    "vscode": {
+      "interpreter": {
+        "hash": "5e820f3ddc028a719ffe50e7d80dd01658ce1fe998d4f6f388d9b09d11d3d164"
+      }
     }
   },
   "nbformat": 4,
