--- a/Palette_Training_1-main/Assignment_1.ipynb
+++ b/Palette_Training_1-main/Assignment_1.ipynb
@@ -122,11 +122,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "dfPaZrkGMNRa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Yield was not good this year\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "40.0"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# We built a function - canola_convertion () to convert pounds to bushel for canola. \n",
         "# We added if and else conditional statement to this function\n",
@@ -135,7 +153,16 @@
         "# print if the year was good or bad. \n",
         "\n",
         "## Your code here - down ##\n",
+        "pounds = 2400\n",
+        "def wheat_convertion(pounds):\n",
+        "    bushels = pounds/60\n",
+        "    if bushels > 45:\n",
+        "        print(\"Yield was better this year\")\n",
+        "    else:\n",
+        "        print(\"Yield was not good this year\")\n",
+        "    return bushels\n",
         "\n",
+        "wheat_convertion(pounds)\n",
         "## Your code here - up ##"
       ]
     },
