--- a/Palette_Training_1-main/Assignment_1.ipynb
+++ b/Palette_Training_1-main/Assignment_1.ipynb
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "Hn9rzk2GOr6c"
       },
@@ -187,7 +187,8 @@
         "# It will look like 'apple' in the list. \n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "ls_1 = [2,4,6,8,10]\n",
+        "ls_1.append('apple')\n",
         "## Your code here - up ##"
       ]
     },
