--- a/Palette_Training_1-main/Assignment_1.ipynb
+++ b/Palette_Training_1-main/Assignment_1.ipynb
@@ -95,11 +95,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {
         "id": "FoCDtEylKPjY"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "a is less than b\n"
+          ]
+        }
+      ],
       "source": [
         "# So we assigned a and b in the above cell. Let's write a code that print \n",
         "# \"a is greater b\" or \"a is less than b\" \n",
@@ -108,6 +116,8 @@
         "## Your code here - down ##\n",
         "if a>b:\n",
         "    print(\"a is greater than b\")\n",
+        "else:\n",
+        "    print(\"a is less than b\")\n",
         "## Your code here - up ##"
       ]
     },
@@ -194,31 +204,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "id": "hHYeNRHOPqX2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'apple'"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Now it is time to delete 'apple' word from the list. It looks weird there.\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "ls_1.pop()\n",
         "## Your code here - up ##"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "id": "cr2F3ZWNP3Wv"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Can you print 6 only from the list? If yes, please show in the codes.\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "ls_1[2]\n",
         "## Your code here - up ##"
       ]
     },
