--- a/Palette_Training_1-main/Assignment_1.ipynb
+++ b/Palette_Training_1-main/Assignment_1.ipynb
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 17,
       "metadata": {
         "id": "Hn9rzk2GOr6c"
       },
@@ -204,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {
         "id": "hHYeNRHOPqX2"
       },
@@ -212,10 +212,10 @@
         {
           "data": {
             "text/plain": [
-              "'apple'"
+              "[2, 4, 6, 8, 10]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -224,7 +224,8 @@
         "# Now it is time to delete 'apple' word from the list. It looks weird there.\n",
         "\n",
         "## Your code here - down ##\n",
-        "ls_1.pop()\n",
+        "ls_1.remove('apple')\n",
+        "ls_1\n",
         "## Your code here - up ##"
       ]
     },
