--- a/Palette_Training_1-main/Assignment_1.ipynb
+++ b/Palette_Training_1-main/Assignment_1.ipynb
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 3,
       "metadata": {
         "id": "FoCDtEylKPjY"
       },
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "dfPaZrkGMNRa"
       },
@@ -150,7 +150,7 @@
               "40.0"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -187,11 +187,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 6,
       "metadata": {
         "id": "Hn9rzk2GOr6c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[2, 4, 6, 8, 10, 'apple']"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Assign list that contains even numbers from 1 to 10. Then add apple word to the list. \n",
         "# It will look like 'apple' in the list. \n",
@@ -199,12 +210,13 @@
         "## Your code here - down ##\n",
         "ls_1 = [2,4,6,8,10]\n",
         "ls_1.append('apple')\n",
+        "ls_1\n",
         "## Your code here - up ##"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 7,
       "metadata": {
         "id": "hHYeNRHOPqX2"
       },
@@ -215,7 +227,7 @@
               "[2, 4, 6, 8, 10]"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -231,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "id": "cr2F3ZWNP3Wv"
       },
@@ -242,7 +254,7 @@
               "6"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -286,7 +298,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+      "version": "3.9.13"
     },
     "vscode": {
       "interpreter": {
