--- a/Palette_training_3-main/Assignment_3.ipynb
+++ b/Palette_training_3-main/Assignment_3.ipynb
@@ -120,11 +120,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "1MeSpsIaMFrn"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[4, 49, 81, 16]\n"
+          ]
+        }
+      ],
       "source": [
         "ls = [2,7,9, 4]\n",
         "\n",
@@ -132,6 +140,11 @@
         "# Ceate a list that consist of square of ls values.\n",
         "\n",
         "## Your code here - down ##\n",
+        "ls = [2,7,9, 4]\n",
+        "ls2 = []\n",
+        "for i in ls:\n",
+        "    ls2.append(i**2)\n",
+        "print(ls2)\n",
         "\n",
         "## Your code here - up ##"
       ]
@@ -162,35 +175,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "OXhs3bGZM-Oj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(2, 3)"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "ar_1 = np.array([[3, 4, 5],\n",
         "                 [3, 4, 5]])\n",
         "# What is shape of the array?\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "ar_1.shape\n",
         "## Your code here - up ##"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "oOm_o0nCNWGD"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[3, 4, 5]"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "ar_2 = ([[3, 4, 5],\n",
         "         [8, 4, 1]])\n",
         "# Print first row of ar_2\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "ar_2[0]\n",
         "## Your code here - up ##"
       ]
     },
