--- a/Palette_training_3-main/Assignment_3.ipynb
+++ b/Palette_training_3-main/Assignment_3.ipynb
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 25,
       "metadata": {
         "id": "1MeSpsIaMFrn"
       },
@@ -140,7 +140,6 @@
         "# Ceate a list that consist of square of ls values.\n",
         "\n",
         "## Your code here - down ##\n",
-        "ls = [2,7,9, 4]\n",
         "ls2 = []\n",
         "for i in ls:\n",
         "    ls2.append(i**2)\n",
@@ -151,16 +150,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "41u-FWnoMpfq"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[4, 49, 81, 16]\n"
+          ]
+        }
+      ],
       "source": [
         "# Method 2\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "ls3 = [i**2 for i in ls]\n",
+        "print(ls3)\n",
         "## Your code here - up ##"
       ]
     },
@@ -240,91 +248,158 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "y9bfDeDQOBAn"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Write a code that will print 1 in ar_2.\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "ar_2[1][-1]\n",
         "## Your code here - up ##"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "qSs9eeJZOPSs"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "4.166666666666667"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Print entire mean of ar_2\n",
         "\n",
         "## Your code here - down ##\n",
+        "np.mean(ar_2)\n",
         "\n",
         "## Your code here - up ##"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "eoWFWqzLOiuP"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([5.5, 4. , 3. ])"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Print each columns' mean\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "np.mean(ar_2, axis=0)\n",
         "## Your code here - up ##"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "z2JxGSG1OyR1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2.1147629234082532"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Print entire standard deviation  of ar_2\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "np.std(ar_2)\n",
         "## Your code here - up ##"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "MxSBTiL4O4-W"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([0.81649658, 2.86744176])"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Print each rows' standard deviation.\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "np.std(ar_2, axis=1)\n",
         "## Your code here - up ##"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "XF4u_fPtPBAX"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.16666666666666696"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Find the difference between mean and median of entire ar_2.\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "np.mean(ar_2) - np.median(ar_2)\n",
         "## Your code here - up ##"
       ]
     },
@@ -337,6 +412,14 @@
         "Are mean and median same? If they are different, explain what does that mean.\n",
         "\n",
         "Please explain below in this cell only.\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Mean and Median are not the same. Mean is for finding the average of all values in a set of numbers by adding sum of the set and dividing by the count of numbers in the set. Median is the middle value of a set of numbers and is for find the center of a data set."
       ]
     }
   ],
