--- a/Palette_training_4-main/Assignment_4.ipynb
+++ b/Palette_training_4-main/Assignment_4.ipynb
@@ -341,16 +341,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "JqIEftfSmJha"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "RM\n",
+              "44     20.339000\n",
+              "10     21.168571\n",
+              "69     22.418000\n",
+              "45     22.920000\n",
+              "40     23.265000\n",
+              "19     24.163000\n",
+              "51     24.683000\n",
+              "101    24.993000\n",
+              "9      25.364000\n",
+              "70     25.807000\n",
+              "Name: SpringWheat, dtype: float64"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# 4. Use groupby() function and find worst 10 RMs in terms of average Spring Wheat through 10 years.\n",
         "\n",
         "## Your code here - down ##\n",
-        "\n",
+        "df.groupby('RM')['SpringWheat'].mean().sort_values(ascending=True).head(10)\n",
         "## Your code here - up ##"
       ]
     },
