--- a/Palette_Training_5-main/Assignment_5.ipynb
+++ b/Palette_Training_5-main/Assignment_5.ipynb
@@ -23,13 +23,13 @@
     "\n",
     "2. **GIS Data**\n",
     "\n",
-    "**Clean and prepare the data.** This may include removing missing values, handling outliers, and transforming the data if necessary.\n",
+    "- **Clean and prepare the data.** This may include removing missing values, handling outliers, and transforming the data if necessary.\n",
     "\n",
-    "**Explore the data** by generating summary statistics, creating visualizations, and identifying trends, patterns, and outliers.\n",
+    "- **Explore the data** by generating summary statistics, creating visualizations, and identifying trends, patterns, and outliers.\n",
     "\n",
-    "**Perform statistical analysis** on the data, such as regression analysis and supervised or unsupervised ML (One Supervised and One Unsupervised Required) to understand the relationship between different variables and the yield of crops.\n",
+    "- **Perform statistical analysis** on the data, such as regression analysis and supervised or unsupervised ML (One Supervised and One Unsupervised Required) to understand the relationship between different variables and the yield of crops.\n",
     "\n",
-    "**Develop insights and conclusions based** on your analysis.For example, you\n",
+    "- **Develop insights and conclusions based** on your analysis.For example, you\n",
     "might identify which crops have the highest yields, which rural municipalities\n",
     "have the most productive farmland, or which years had the best yields overall.\n",
     "\n"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
