--- a/Palette_Training_5-main/Assignment_5_FINAL.ipynb
+++ b/Palette_Training_5-main/Assignment_5_FINAL.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Objective\n",
     "\n",
-    "The objective of this assignment is to provide hands-on experience in data science, including data cleaning, exploration, visualization, feature selection, and machine learning model deployment. The focus is on analyzing the Rural Municipality Yield Data from 1938 to 2021 to identify trends, patterns, and insights, and using machine learning techniques to predict crop yields for the top 10 most consumed crops all over the world.\n",
+    "The objective of this assignment is to provide hands-on experience in data science, including data cleaning, exploration, visualization, feature selection, and machine learning model deployment. The focus is on analyzing the Rural Municipality Yield Data from 1938 to 2021 to identify trends, patterns, and insights, and using machine learning techniques to predict crop yields for the top 10 most consumed crops all over the Saskatchewan.\n",
     "\n",
     "## Crop Yield Prediction\n",
     "\n",
