--- a/Training_Material/Palette_Skills_GPT.ipynb
+++ b/Training_Material/Palette_Skills_GPT.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'As a professional python programmer & Data Scientist, I want you create a machine learning model for this data in the most optimal way utilizing your maximum response tokens. Check the formating before submitting. The first step would be to pre-process the data and to split it into training and testing sets. I would then standardize the data using a minmax scaler. After this, I would choose an appropriate machine learning model to fit this data. I would likely use some form of regression, such as Linear Regression, Ridge Regression, Lasso Regression, or Support Vector Regression. After selecting the model, I would train the model on the training set and evaluate it on the testing set. Finally, I would use hyperparameter tuning techniques, such as grid search, to fine-tune the model and find the best parameters that give the best performance. This is the data, complete the response in python:'"
+    "prompt = 'As a professional python programmer make the suggested changes for the following code snippet to make it more efficient and properly working. The code snippet is as follows:'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -46,47 +46,54 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "# Suggested Changes\n",
       "\n",
       "import pandas as pd\n",
-      "from sklearn.model_selection import train_test_split\n",
+      "from sklearn.cluster import KMeans\n",
+      "import matplotlib.pyplot as plt\n",
+      "df=df_ms.copy()\n",
+      "\n",
+      "# Define the features to be used for clustering\n",
+      "X = df[['WinterWheat_mean', 'Canola_mean', 'SpringWheat_mean',\n",
+      "       'Mustard_mean', 'Durum_mean', 'Sunflowers_mean', 'Oats_mean',\n",
+      "       'Lentils_mean', 'Peas_mean', 'Barley_mean', 'FallRye_mean',\n",
+      "       'CanarySeed_mean', 'SpringRye_mean', 'TameHay_mean', 'Flax_mean',\n",
+      "       'Chickpeas_mean', 'WinterWheat_std', 'Canola_std', 'SpringWheat_std',\n",
+      "       'Mustard_std', 'Durum_std', 'Sunflowers_std', 'Oats_std', 'Lentils_std',\n",
+      "       'Peas_std', 'Barley_std', 'FallRye_std', 'CanarySeed_std',\n",
+      "       'SpringRye_std', 'TameHay_std', 'Flax_std', 'Chickpeas_std']]\n",
+      "\n",
+      "# Normalize the features\n",
       "from sklearn.preprocessing import MinMaxScaler\n",
-      "from sklearn.linear_model import LinearRegression, Ridge, Lasso, SVR\n",
-      "from sklearn.model_selection import GridSearchCV\n",
+      "scaler = MinMaxScaler().fit(X)\n",
+      "X = scaler.transform(X)\n",
       "\n",
-      "# Load the data\n",
-      "data = pd.read_csv('data.csv')\n",
+      "# Elbow method to determine the optimal number of clusters\n",
+      "sse = []\n",
+      "for k in range(1, 11):\n",
+      "    kmeans = KMeans(n_clusters=k)\n",
+      "    kmeans.fit(X)\n",
+      "    sse.append(kmeans.inertia_)\n",
       "\n",
-      "# Pre-process the data\n",
-      "data.fillna(0, inplace = True)\n",
-      "X = data.drop('Year', axis = 1).values\n",
-      "y = data['Year'].values\n",
+      "# Plot the elbow graph\n",
+      "plt.plot(range(1, 11), sse)\n",
+      "plt.xlabel('Number of Clusters')\n",
+      "plt.ylabel('Sum of Squared Distances')\n",
+      "plt.show()\n",
       "\n",
-      "# Split the data into training and test sets\n",
-      "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
+      "# Fit the KMeans model with the optimal number of clusters\n",
+      "kmeans = KMeans(n_clusters=4)\n",
+      "kmeans.fit(X)\n",
       "\n",
-      "# Standardize the data using minmax scaler\n",
-      "scaler = MinMaxScaler()\n",
-      "X_train = scaler.fit_transform(X_train)\n",
-      "X_test = scaler.transform(X_test)\n",
+      "# Predict the cluster labels for each data point\n",
+      "labels = kmeans.predict(X)\n",
       "\n",
-      "# Train the model \n",
-      "# We will use a Ridge Regression model\n",
-      "model = Ridge()\n",
-      "model.fit(X_train, y_train)\n",
-      "\n",
-      "# Test the model\n",
-      "score = model.score(X_test, y_test)\n",
-      "\n",
-      "# Use grid search to find the optimal hyperparameters\n",
-      "parameters = {'alpha': [0.001, 0.01, 0.1, 1, 10, 100, 1000]}\n",
-      "grid_search = GridSearchCV(model, parameters, cv=5, scoring='r2')\n",
-      "grid_search.fit(X_train, y_train)\n",
-      "\n",
-      "# Print the optimal parameters\n",
-      "print('Optimal parameters: {}'.format(grid_search.best_params_))\n",
-      "\n",
-      "# Print the best score achieved\n",
-      "print('Best score: {}'.format(grid_search.best_score_))\n"
+      "# Plot the data points and cluster centers\n",
+      "plt.scatter(X[:, 0], X[:, 16], c=labels)\n",
+      "plt.scatter(kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:, 16], marker='x', s=200, linewidths=3, color='r')\n",
+      "plt.xlabel('Canola_mean')\n",
+      "plt.ylabel('Canola_std')\n",
+      "plt.show()\n"
      ]
     }
    ],
