--- a/Palette_Training_5-main/Assignment_5_v5.ipynb
+++ b/Palette_Training_5-main/Assignment_5_v5.ipynb
@@ -6252,6 +6252,10 @@
     "    # Return the forecast value\n",
     "    return forecast.iloc[-1]['yhat']\n",
     "\n",
+    "# Define unique_rms and crops variables\n",
+    "unique_rms = [101, 102, 103]  # Replace with the actual list of unique RM numbers\n",
+    "crops = ['Canola', 'Oats', 'Barley']  # Replace with the actual list of crops\n",
+    "\n",
     "st.title(\"Crop Yield Forecast\")\n",
     "\n",
     "# User input for RM and crop\n",
